<resources>
    <string name="app_name">SearchBook</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login and signup -->
    <string name="prompt_email">Email</string>
    <string name="prompt_userName">User Name</string>
    <string name="prompt_Name">Name</string>
    <string name="prompt_lastName">Last name</string>
    <string name="prompt_phone">(+55) Phone</string>
    <string name="prompt_password">Password </string>
    <string name="prompt_confirmPassword">Confirm Password</string>
    <string name="action_login">Log in</string>
    <string name="action_signup">Sign up</string>
    <string name="action_cancel">Cancelar</string>
    <string name="action_modificarData">Modificar Datos</string>
    <string name="error_invalid_email">Email inválido</string>
    <string name="error_invalid_password">Password demasiado corta</string>
    <string name="error_incorrect_password">Password incorrecta</string>
    <string name="error_field_required">Este Campo es requerido</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_signup">Signup</string>
    <string name="title_activity_principal_user">PrincipalUser</string>
    <string name="title_activity_principal_admin">PrincipalAdmin</string>
</resources>
