<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <EditText
        android:id="@+id/editTxtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_Name"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/EditTxtLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/prompt_lastName"
        android:ems="10" >


    </EditText>

    <EditText
        android:id="@+id/EditTxtEmailUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_email"
        android:ems="10"
        android:inputType="textEmailAddress">


    </EditText>

    <EditText
    android:id="@+id/editTextPassword"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:ems="10"
    android:inputType="textPassword"
    android:hint="@string/prompt_password"
    android:password="true" />

    <EditText
        android:id="@+id/editTextPasswordConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/prompt_confirmPassword"
        android:password="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_signup"
        android:id="@+id/btn_toSignUp"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="14dp"
        android:layout_gravity="center_horizontal"
        android:onClick="toSignUp"
        android:background="#112ff0"
        android:textColor="#ffffff" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_cancel"
        android:id="@+id/btn_toCancel"
        android:layout_gravity="center_horizontal"
        android:onClick="btn_toCancel" />

</LinearLayout>
