<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">



    <EditText
        android:id="@+id/txtUsernameLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:inputType="textCapWords"
        android:hint="@string/prompt_email"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editTextPassLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/prompt_password"
        android:password="true" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/action_login"
        android:background="#1f56d5"
        android:textColor="#ffffff"
        android:onClick="btnLogin"
        android:nestedScrollingEnabled="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="¿No tienes cuenta?"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/action_signup"
        android:id="@+id/btn_toSignUp"
        android:layout_gravity="center_horizontal"
        android:onClick="btn_toSignUp" />

</LinearLayout>